# multimedia_image_standard

./: BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  ohos.build
frameworks/innerkitsimpl/codec/src/: image_packer.cpp  image_packer_ex.cpp  image_source.cpp
frameworks/innerkitsimpl/common/include/: image_packer_ex.h  pixel_map_utils.h
frameworks/innerkitsimpl/common/src/: incremental_pixel_map.cpp  pixel_map.cpp  pixel_map_parcel.cpp
frameworks/innerkitsimpl/converter/include/: basic_transformer.h  matrix.h  pixel_convert.h  post_proc.h  scan_line_filter.h
frameworks/innerkitsimpl/converter/src/: basic_transformer.cpp  matrix.cpp  pixel_convert.cpp  post_proc.cpp  scan_line_filter.cpp
frameworks/innerkitsimpl/pixelconverter/: BUILD.gn
frameworks/innerkitsimpl/pixelconverter/include/: pixel_convert_adapter.h  pixel_map_jni_utils.h
frameworks/innerkitsimpl/pixelconverter/src/: pixel_convert_adapter.cpp
frameworks/innerkitsimpl/stream/include/: buffer_packer_stream.h  buffer_source_stream.h  file_packer_stream.h  file_source_stream.h  incremental_source_stream.h  istream_source_stream.h  ostream_packer_stream.h  packer_stream.h  source_stream.h
frameworks/innerkitsimpl/stream/src/: buffer_packer_stream.cpp  buffer_source_stream.cpp  file_packer_stream.cpp  file_source_stream.cpp  incremental_source_stream.cpp  istream_source_stream.cpp  ostream_packer_stream.cpp
frameworks/innerkitsimpl/test/: BUILD.gn
frameworks/innerkitsimpl/test/unittest/: color_converter_test.cpp  image_pixel_map_test.cpp  image_source_bmp_test.cpp  image_source_gif_test.cpp  image_source_jpeg_test.cpp  image_source_png_test.cpp  image_source_raw_test.cpp  image_source_util.cpp  image_source_util.h  image_source_wbmp_test.cpp  image_source_webp_test.cpp  image_transform_test.cpp
frameworks/innerkitsimpl/utils/: BUILD.gn
frameworks/innerkitsimpl/utils/include/: image_format.h  image_log.h  image_trace.h  image_utils.h
frameworks/innerkitsimpl/utils/src/: image_trace.cpp  image_utils.cpp
frameworks/kits/js/common/: image_napi_utils.cpp  image_source_napi.cpp  native_module_ohos_image.cpp  pixel_map_napi.cpp
ide/: BUILD.gn  image_decode_config.gni
interfaces/innerkits/: BUILD.gn
interfaces/innerkits/include/: decode_listener.h  image_native_interface_utils.h  image_packer.h  image_source.h  image_type.h  incremental_pixel_map.h  log_tags.h  media_errors.h  modules.h  peer_listener.h  pixel_map.h  pixel_map_manager.h
interfaces/kits/native/: BUILD.gn_old  libimage_pixelmap.json
interfaces/kits/native/include/: image_pixel_map.h
interfaces/kits/native/ndk_test_example/: BUILD.gn  ohos_image_PixelMapNdkTest.cpp
interfaces/kits/native/src/: image_pixel_map.cpp
interfaces/kits/native/test/: BUILD.gn
interfaces/kits/native/test/unittest/: pixel_map_ndk_test.cpp
mock/native/: BUILD.gn
mock/native/include/: directory_ex.h  errors.h  message_parcel.h  nocopyable.h  parcel.h  refbase.h  rwlock.h  singleton.h
mock/native/include/hilog/: log.h  log_c.h  log_cpp.h
mock/native/include/secure/: securec.h
mock/native/src/: HiLog.cpp  directory_ex.cpp  message_parcel.cpp  parcel.cpp  refbase.cpp  rwlock.cpp
plugins/common/libs/: BUILD.gn
plugins/manager/: BUILD.gn
plugins/manager/include/: plugin_server.h  plugin_service.h
plugins/manager/include/image/: abs_image_decoder.h  abs_image_encoder.h  image_plugin_type.h  input_data_stream.h  output_data_stream.h
plugins/manager/include/pluginbase/: plugin_utils.h
plugins/manager/include/utils/: pointer_key_map.h
plugins/manager/src/: plugin_server.cpp
plugins/manager/src/common/: attr_data.cpp  platform_adp.cpp  (+1 more)
test/resource/image/: ohos_test.xml
(+67 files in other folders)
