# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
module_output_path = "multimedia_image/image_standard"
ohos_unittest("pixlmapndktest") {
  module_out_path = module_output_path
  include_dirs = [
    "//foundation/multimedia/image_standard/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//foundation/multimedia/image_standard/interfaces/kits/native/include",
    "//utils/native/base/include",
  ]
  sources = [ "//foundation/multimedia/image_standard/interfaces/kits/native/test/unittest/pixel_map_ndk_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_standard/interfaces/innerkits:image",
    "//foundation/multimedia/image_standard/interfaces/kits/native:multimedia_target",
    "//foundation/multimedia/image_standard/interfaces/kits/native/ndk_test_example:image_ndk_test_jni",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]
#  external_deps = [ "hilog:libhilog" ]
  resource_config_file =
      "//foundation/multimedia/image_standard/test/resource/image/ohos_test.xml"
}

################################################
group("unittest") {
  testonly = true
  deps = [ ":pixlmapndktest" ]
}
################################################
